@@ -4589,3 +4589,5 @@ Changelog for GXemul:
 		Updating the NetBSD/pmax install instructions: 5.1 -> 5.1.1.
 		Updating the NetBSD/cobalt install instructions 5.0.1 to 5.1.1.
 		Redirect PowerPC SPRs 0x10c/10d to 0x11c/11d (Time Base).
+20120121	Updating OpenBSD/landisk installation instructions: 4.9 -> 5.0.
+
